Revert "Revert "New listeners api (WIP)""
This reverts commit 592a24ff